--- a/Frontend/src/Components/Navbar.css
+++ b/Frontend/src/Components/Navbar.css
@@ -1,14 +1,12 @@
 .navbar {
   position: fixed;
-  top: 0;
   left: 0;
   width: 100%;
   background: rgba(26, 26, 26, 0.9); 
   backdrop-filter: blur(10px);
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: space-evenly;
   z-index: 1000;
 }
 
